<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">P:  </string>
    <string name="time">T:  </string>
    <string name="move_right">Right</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New</string>
    <string name="startgame">Start</string>
    <string name="stopgame">Stop</string>
    <string name="continuegame">C</string>
    <string name="pausegame">P</string>
</resources>
