<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.example.canvasdemo.MainActivity">

    <item
        android:id="@+id/action_newGame"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/newgame"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_startGame"
        android:title="@string/startgame"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stopGame"
        android:title="@string/stopgame"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_continue"
        android:orderInCategory="10"
        android:title="@string/continuegame"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pause"
        android:orderInCategory="20"
        android:title="@string/pausegame"
        app:showAsAction="always" />

</menu>
